<resources>
    <string name="app_name">Exam Helper</string>
    <string name="title_activity_main_view">MainViewActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="today">DNES</string>
    <string name="dnes">DNES</string>
    <string name="showmore">Zobraziť viac</string>
    <string name="plan">PLÁN</string>
    <string name="zajtra">ZAJTRA</string>
    <string name="celodenny">CELODENNÝ PLÁN</string>
    <string name="ranny">RANNÝ PLÁN</string>
    <string name="obedny">OBEDNÝ PLÁN</string>
    <string name="vecerny">VEČERNÝ PLÁN</string>
    <string name="title_activity_my_plan">MyPlanActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_my_plan_tabs">MyPlanTabsActivity</string>
    <string name="pridat">Pridať</string>
    <string name="title_activity_main_vie">MainActivityVie</string>
    <string name="title_activity_navigation_main">NavigationMainActivity</string>

    <string-array name="names">
        <item></item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spokojnost">Spokojnosť</string>
    <string name="pokus">Pokus</string>
    <string name="znamka">Známka</string>
    <string name="pridatHabit">addHabit</string>
    <string name="backButton">back</string>
    <string name="pridatExam">Pridať</string>
    <string name="ostatnedni">OSTATNÉ</string>
    <string name="planaktualny">AKTUÁLNY PLÁN</string>
    <string name="upravitExam">updateEx</string>
    <string name="updateExam">updateE\\</string>
    <string name="tabs_settings">tabsSettings</string>
    <string name="settings_tabs">Upozornenia</string>
    <string name="interval">Interval upozornení</string>
    <string name="time">Doba upozorňovania</string>
    <string name="infoAboutDailyPlan">Nahradiť jednotlivé plány celodenným plánom. Vhodné pre dni bez učenia. Delený plán (ranný, obedný, večerný) sa Ti nastaví vtedy, keď si zvolíš skúšku, na ktorú sa ideš učiť. </string>
    <string name="infoAboutDailyPlanVisible">Nahradiť celodenný plán jednotlivými plánmi.</string>
    <string name="zrusit">Zrušiť</string>
    <string name="ano">Áno</string>
    <string name="whatHabit">Z uvedených aktivít si zvoľ tú, ktorá ti teraz vyhovuje ako forma oddychu. Voľ si väčšinou kratšie prestávky (5 - 10 minút), po niekoľkých kratších si urob i dlhšiu (15 - 30 minút). </string>
    <string name="habitActivity">Každodenné rituály sú hnacím motorom, ktorý ťa poháňa vpred. Je dôležité sústrediť sa na spôsob a systém dosiahnutia, nie na samotné ciele. Jediné, čo musíš, je naštartovať svoje dni s pravidelnými rituálmi a ver, že ciele budú na dosah.</string>
    <string name="dateResult">Dátum</string>
    <string name="startStudy">Chceš začať učebný plán?</string>
    <string name="chooseExam">Vyber si skúšku, ktorej príprave sa chceš dnes venovať a spustí sa Ti intenzívnejší učebný plán.</string>
    <string name="subjectTitle">Názov predmetu</string>
    <string name="skratka">Skratka</string>
    <string name="pridatSub">Pridať predmet</string>
    <string name="ritual">Názov rituálu</string>
    <string name="description">Podrobnosti</string>
    <string name="paletka">Farba predmetu</string>
    <string name="pridatS">Pridať</string>
    <string name="pref_previously_started">previously</string>
</resources>
