<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">

<android.support.v4.widget.NestedScrollView
    android:layout_width="wrap_content"
    android:background="@color/cardview_light_background"
    android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:elevation="6dp"
        android:id="@+id/cardViewMyPlanTab"
        card_view:cardCornerRadius="5dp"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/infoAboutDoneActivities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:text="Zaškrnutím políčka pri aktivite udávaš, že si ju vykonal. Tento zoznam činností sa Ti takisto objaví v podobe notifikácií." />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/dailyTextView"
        android:layout_below="@id/cardViewMyPlanTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/celodenny"
        android:layout_marginBottom="10dp"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/infoAboutPlan"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/cardViewMyPlanTab"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_info_black_39dp"
        android:background="@color/white"
        android:layout_toRightOf="@id/dailyTextView"
        android:layout_toLeftOf="@id/settingsButtonDaily"
        >

    </ImageButton>




    <TextView
        android:id="@+id/infoAboutDailyPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_below="@id/dailyTextView"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="5dp"
        android:text="@string/infoAboutDailyPlan"
        android:textAppearance="@android:style/TextAppearance.Material.Caption" />

    <ProgressBar
        android:id="@+id/progressDailyBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/infoAboutDailyPlan"
        android:paddingBottom="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp" />


    <ImageButton
        android:id="@+id/settingsButtonDaily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_more_vert_black_24dp"
        android:layout_below="@id/cardViewMyPlanTab"
        android:layout_marginTop="15dp"




        />

    <Switch
        android:id="@+id/switchDailyPlan"
        android:layout_width="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/settingsButtonDaily"
        android:paddingRight="10dp"
        android:layout_alignTop="@id/infoAboutDailyPlan"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_daily_plan"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressDailyBar"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:elevation="6dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/mydailyView"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ciele"
                android:id="@+id/focusText"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nie je momentálne zvolený žiadny plán."
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/txDaily"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:visibility="gone"

                />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewDailyHabits"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>



            <!--<ListView
                android:id="@+id/activityListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/todayView"
                android:layout_below="@+id/dailyTextView"
                android:layout_marginTop="12dp" />-->

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/morningTextViewMyPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_daily_plan"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/ranny"
        android:textSize="20sp"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <ProgressBar
        android:id="@+id/progressMorningBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/morningTextViewMyPlan"
        android:paddingBottom="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp" />


    <ImageButton
        android:id="@+id/settingsButtonMorning"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressMorningBar"
        android:layout_alignRight="@id/morningTextViewMyPlan"
        android:layout_below="@id/card_view_daily_plan"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingRight="0dp"
        android:background="@drawable/ic_more_vert_black_24dp"
        />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_morning_plan"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressMorningBar"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:elevation="6dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/mymorningView"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nie je momentálne zvolený žiadny plán."
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/txMorningGone"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:visibility="gone"

                />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewMorningHabits"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

            <!--<ListView
                android:id="@+id/activityListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/todayView"
                android:layout_below="@+id/dailyTextView"
                android:layout_marginTop="12dp" />-->

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/lunchTextViewMyPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_morning_plan"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/obedny"
        android:textSize="20sp"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <ProgressBar
        android:id="@+id/progressBarLunch"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/lunchTextViewMyPlan"
        android:paddingBottom="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp" />


    <ImageButton
        android:id="@+id/settingsButtonLunch"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBarLunch"
        android:layout_alignRight="@id/lunchTextViewMyPlan"
        android:layout_below="@id/card_view_morning_plan"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingRight="0dp"
        android:background="@drawable/ic_more_vert_black_24dp"
        />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_lunch_plan"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBarLunch"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:elevation="6dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/mylunchView"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nie je momentálne zvolený žiadny plán."
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/txLunchGone"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:visibility="gone"

                />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewLunchHabits"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/eveningTextViewMyPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_lunch_plan"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/vecerny"
        android:textSize="20sp"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <ProgressBar
        android:id="@+id/progressBarEvening"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/eveningTextViewMyPlan"
        android:paddingBottom="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp" />


    <ImageButton
        android:id="@+id/settingsButtonEvening"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBarEvening"
        android:layout_alignRight="@id/eveningTextViewMyPlan"
        android:layout_below="@id/card_view_lunch_plan"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:paddingRight="0dp"
        android:background="@drawable/ic_more_vert_black_24dp"
        />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_evening_plan"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBarEvening"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:elevation="6dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/myeveningView"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nie je momentálne zvolený žiadny plán."
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/txEveningGone"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:visibility="gone"

                />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewEveningHabits"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>
</android.support.v4.widget.NestedScrollView>
</LinearLayout>